<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">


    <EditText
        android:id="@+id/editTextText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:inputType="text"
        android:text="Я центрировался от родителя" />

    <EditText
        android:id="@+id/editTextText1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/editTextText"
        android:layout_centerInParent="true"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:inputType="text"
        android:text="Я центрировался от родителя" />

    <Button
        android:id="@+id/button"
        android:layout_width="146dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextText1"
        android:layout_centerInParent="true"
        android:layout_marginBottom="20dp"
        android:onClick="onMyButtonClick1"
        android:text="@string/click_on_me" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:textSize="30sp"
        android:text="@string/left_top" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:textSize="30sp"
        android:text="@string/right_top" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:textSize="30sp"
        android:text="@string/left_bottom" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:textSize="30sp"
        android:text="@string/right_bottom" />

</RelativeLayout>